# Python-Git

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Source/: main.py  test_main.py
Source/Initialization/: hash_object.py  init.py  test_hash_object.py  test_init.py
Source/Test_Objects/: file_level0.md
Source/Test_Objects/Folder1/: file_level1.md
Source/Test_Objects/Folder1/Folder2/: file_level2.md
Source/Test_Objects/Folder1/_Folder2/: _file_level2
Source/Tracking_Changes/: add.py
Source/Work_Tree/: diff.py  init.py  test_work_tree.py
git_clone/: command_line.py  main.py  text_colors.py
git_clone/Initialization/: hash_object.py  init.py  test_hash_object.py  test_init.py
git_clone/Tracking_Changes/: ls_tree.py  status.py
git_clone/src/: command_line.py  main.py
git_clone/src/Initialization/: hash_object.py  init.py
git_clone/src/Tracking_Changes/: add.py  ls_tree.py  status.py
git_clone/tests/: test_main.py
git_clone/tests/Initialization/: test_hash_object.py  test_init.py
scripts/: check-install.sh
tests/: test_main.py
tests/Initialization/: test_hash_object.py  test_init.py
