[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git_clone"
version = "0.0.1"
authors = [{name="Alex Feren",email="alexandre.feren@gmail.com"}]
description = "Git implementation in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "Unlicense"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/AlexandreFeren/Python-Git"
Issues = "https://github.com/AlexandreFeren/Python-Git/issues"